追加と変更
スライダーでサイズの変更をできるようにした。